package abstractfactory.factory

abstract class Item(protected val caption: String): HTMLLable